# cmake_cpp_workshop

./: .gitignore  README.md
asm_cpp/: CMakeLists.txt
asm_cpp/src/: main.cpp  maxthree.s
complejo/: CMakeLists.txt
complejo/include/: complex.h
complejo/src/: complex.cpp  main.cpp
hello_cmake/: CMakeLists.txt  README.md
hello_cmake/src/: main.cpp
hello_gcc/: README.md  hello  hello.cpp  hello.i  hello.s
hello_makefile/: Makefile
hello_makefile/include/: vector3.h
hello_makefile/src/: main.cpp  vector3.cpp
hilos/: CMakeLists.txt
hilos/src/: main.cpp
lib_cmake/: CMakeLists.txt
lib_cmake/include/: saludo.h
lib_cmake/src/: saludo.cpp
project_cmake/: CMakeLists.txt
varios_archivos/: README.md  saludo.h  varios
